name:                neo4j-driver
version:             1.0.0.0
synopsis:            Neo4j driver for connecting to the Neo4j graph database using the Bolt protocol
description:         Please see README.md
homepage:            http://github.com/boggle/neo4j-haskell-driver
license:             Apache-2.0
license-file:        LICENSE.txt
author:              Stefan Plantikow,
maintainer:          Stefan Plantikow <stefan.plantikow@googlemail.com>
copyright:           2015 Stefan Plantikow
category:            Data
build-type:          Simple
cabal-version:       >=1.10

extra-source-files:
  LICENSE.txt
  NOTICE.txt
  README.md

library
  hs-source-dirs:     src

  exposed-modules:    Database.Neo4j.Value
                    , Database.Neo4j.Util.ShowBytes
                    , Database.Neo4j.Util.BinaryValue
                    , Database.Neo4j.Internal.PGM
                    , Database.Neo4j.Internal.ValueCodec
                    , Database.Neo4j.Internal.Bolt.Message
                    , Database.Neo4j.Internal.Packstream.Atomic
                    , Database.Neo4j.Internal.Packstream.Atom
                    , Database.Neo4j.Internal.Packstream.Signature
                    , Database.Neo4j.Internal.Packstream.Coding
                    , Database.Neo4j.Internal.Packstream.Marker

  other-modules:      Database.Neo4j.Internal.Util.Expect
                    , Database.Neo4j.Internal.Util.Table
                    , Database.Neo4j.Internal.Util.IndexedMap

  build-depends:      base                >= 4.7 && < 5
                    , bytestring          >= 0.10.6
                    , binary              >= 0.7.5
                    , data-binary-ieee754 >= 0.4.4
                    , text                >= 1.2.1
                    , vector              >= 0.10.12
                    , containers          >= 0.5.6.0

  default-language:     Haskell2010
  default-extensions:   LambdaCase
                      , GADTs
                      , UnicodeSyntax
                      , TypeFamilies
                      , StandaloneDeriving
                      , FlexibleInstances
                      , ScopedTypeVariables

  ghc-options:        -Wall -O2
  ghc-prof-options:   -prof -auto-all -caf-all
--
-- test-suite neo4j-driver-test
--   type:               exitcode-stdio-1.0
--   hs-source-dirs:     test
--   main-is:            Test.hs
--   other-modules:      Test.SCInstances
--                     , Codec.Packstream.CodingTest
--                     , Codec.Packstream.AtomTest
--   build-depends:      base
--                     , neo4j-driver
--                     , tasty              >= 0.10.1
--                     , tasty-rerun        >= 1.1.4
--                     , tasty-hspec        >= 1.1.2
--                     , tasty-smallcheck   >= 0.8.0
--                     , smallcheck         >= 1.1.1
--                     , smallcheck-series  >= 0.5.1
--                     -- , tasty-quickcheck   >= 0.8.3.2
--                     , binary             >= 0.7.5
--                     , text               >= 1.2.1
--                     , vector             >= 0.10.12
--                     , containers         >= 0.5.6.0
--
--   default-language:     Haskell2010
--   default-extensions:   NegativeLiterals
--                       , UnicodeSyntax
--
--   ghc-options:          -threaded -rtsopts -with-rtsopts=-N -O2
--   ghc-prof-options:     -prof -auto-all -caf-all

source-repository head
  type:     git
  location: https://github.com/boggle/neo4j-haskell-driver
